# assignment-01-python

./: .gitignore  README.md  pyproject.toml  run_benchmark.sh
src/assignment_01_python/: __about__.py  __init__.py  benchmark.py  fm_index.py  naive_search.py  suffix_array_search.py
src/implementing_search_python/: __init__.py  benchmark.py  fm_index.py  naive_search.py  suffix_array_search.py
tests/: __init__.py  test_sa_search.py
