[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assignment-01-python"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Matthew Martin", email = "matthew@mttmartin.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["iv2py", "typer"]

[project.urls]
Documentation = "https://github.com/Matthew Martin/assignment-01-python#readme"
Issues = "https://github.com/Matthew Martin/assignment-01-python/issues"
Source = "https://github.com/Matthew Martin/assignment-01-python"

[tool.hatch.version]
path = "src/assignment_01_python/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/assignment_01_python tests}"

[project.scripts]
assignment-01-python = "assignment_01_python:run"

[tool.coverage.run]
source_pkgs = ["assignment_01_python", "tests"]
branch = true
parallel = true
omit = [
  "src/assignment_01_python/__about__.py",
]

[tool.coverage.paths]
assignment_01_python = ["src/assignment_01_python", "*/assignment-01-python/src/assignment_01_python"]
tests = ["tests", "*/assignment-01-python/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
