[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "implementing-search-python"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Matthew Martin", email = "matthew@mttmartin.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["iv2py>=0.6.1", "typer", "scipy"]

[project.urls]
Documentation = "https://github.com/IFA-Group09/implementing-search-python#readme"
Issues = "https://github.com/IFA-Group09/implementing-search-python/issues"
Source = "https://github.com/IFA-Group09/implementing-search-python"

[tool.hatch.version]
path = "src/implementing_search_python/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/implementing-search-python tests}"

[project.scripts]
implementing-search-python = "implementing_search_python:run"

[tool.coverage.run]
source_pkgs = ["implementing_search_python", "tests"]
branch = true
parallel = true
omit = [
  "src/implementing-search-python/__about__.py",
]

[tool.coverage.paths]
implementing_search_python = ["src/implementing_search_python", "*/implementing_search_python/src/implementing_search_python"]
tests = ["tests", "*/implementing-search-python/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
